--- a/index.css
+++ b/index.css
@@ -21,7 +21,8 @@ body{
     min-height:100dvh;
     width:fit-content;
     width:100%;
-    background-image: url("https://img.freepik.com/free-vector/detailed-gamer-room-illustration_23-2148923561.jpg?w=1380&t=st=1719597371~exp=1719597971~hmac=b9636b0debe67fba19f4d37bfba75e05c6d1966a0f826201ff96afbe8116ff34");
+ background-image: url("./memory\ game\ background.avif");
+
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
