--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ body{
     min-height:100dvh;
     width:fit-content;
     width:100%;
- background-image: url("./memory\ game\ background.avif");
+ background-image: url("./memory_game_background.avif");
 
     background-repeat: no-repeat;
     background-position: center;
