--- a/index.css
+++ b/index.css
@@ -148,13 +148,15 @@ transition:transform 0.5s;
 }
 
 @media(max-width:450px){
-    .box{
-        height:50px;
-        width:50px;
+  .box{
+        height:60px;
+        width:60px;
     }
     .cardswrapper{
         width:300px;
         height:400px;
+        grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, auto);
     }
     .scorewrapper{
         width:280px;
